<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    tools:context=".Activities.SignUpActivity"
    android:background="@color/background">

    <TextView
        android:id="@+id/signup_TV_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/sign_up"
        android:textColor="@color/pink"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="32dp"/>

    <EditText
        android:id="@+id/signup_ET_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signup_TV_title"
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/signup_ET_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signup_ET_name"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/signup_ET_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signup_ET_email"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/signup_ET_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signup_ET_password"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:layout_marginBottom="32dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signup_BTN_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signup_ET_confirm_password"
        android:text="@string/sign_up"
        android:backgroundTint="@color/pink"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/signup_TV_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/signup_BTN_signup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/already_have_an_account_login"
        android:textColor="@color/pink"
        android:clickable="true"
        android:focusable="true"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/signup_IV_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        app:srcCompat="@drawable/img_logo_pic_only"
        android:layout_below="@id/signup_TV_login"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
